<resources>
    <string name="app_name">Simple Weather</string>
    <string name="temperature">Temperature %1$s \u00B0C</string>
    <string name="wind">Wind: %1$s m/s</string>
    <string name="yesterday">Yesterday</string>
    <string name="two_days_ago">Two days ago</string>
    <string name="three_days_ago">Three days ago</string>
    <string name="try_again">Try again</string>
    <string name="search_location">Search location</string>

    <!-- errors -->
    <string name="no_connection">Connection not available</string>
    <string name="server_error">Server error is occurred. Try your action later</string>
    <string name="incorrect_server_data">Incorrect server data</string>
    <string name="location_error">Location not selected. Please choose it</string>
    <string name="unexpected_error">Something wrong happens</string>
</resources>
