<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yesterday" />

    <TextView
        android:id="@+id/yesterday_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        tools:text="Temperature: 10 \u00B0C" />

    <ImageView
        android:id="@+id/yesterday_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        tools:background="@android:color/darker_gray"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/yesterday_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Cloudy" />

    <TextView
        android:id="@+id/yesterday_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        tools:text="Wind: 10 km/h" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_days_ago" />

    <TextView
        android:id="@+id/two_days_ago_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        tools:text="Temperature: 10 \u00B0C" />

    <ImageView
        android:id="@+id/two_days_ago_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:background="@android:color/darker_gray"
        tools:ignore="ContentDescription"
        tools:layout_height="64dp"
        tools:layout_width="64dp" />

    <TextView
        android:id="@+id/two_days_ago_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Cloudy" />

    <TextView
        android:id="@+id/two_days_ago_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        tools:text="Wind: 10 km/h" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_days_ago" />

    <TextView
        android:id="@+id/three_days_ago_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        tools:text="Temperature: 10 \u00B0C" />

    <ImageView
        android:id="@+id/three_days_ago_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:background="@android:color/darker_gray"
        tools:ignore="ContentDescription"
        tools:layout_height="64dp"
        tools:layout_width="64dp" />

    <TextView
        android:id="@+id/three_days_ago_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Cloudy" />

    <TextView
        android:id="@+id/three_days_ago_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        tools:text="Wind: 10 km/h" />
</LinearLayout>
